added simple synth

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,8 @@
     <div class="container">
       <div>
         <h1>Web Audio!</h1>
-        <button onclick="playWebAudio();">Play!</button>
+        <button onclick="playKick();">Play Kick!</button>
+        <button onclick="playSynth();">Play Synth!</button>
       </div>
     </div>
 
