--- a/app/index.html
+++ b/app/index.html
@@ -1,42 +1,47 @@
 <!doctype html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>web audio</title>
+<html lang="" ng-app="web-audio">
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>web audio</title>
 
-    <!-- build:css styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="../bower_components/skeleton/css/skeleton.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <!-- Place favicon.ico in the root directory -->
 
-    <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-  </head>
-  <body>
+  <!-- build:css styles/vendor.css -->
+  <!-- bower:css -->
+  <link rel="stylesheet" href="../bower_components/skeleton/css/skeleton.css" />
+  <!-- endbower -->
+  <!-- endbuild -->
 
-    <div class="container">
-      <div>
-        <h1>Web Audio!</h1>
-        <button onclick="playKick();">Play Kick!</button>
-        <button onclick="playSynth();">Play Synth!</button>
-      </div>
+  <!-- build:css styles/main.css -->
+  <link rel="stylesheet" href="styles/main.css">
+  <!-- endbuild -->
+</head>
+
+<body>
+
+  <div class="container">
+    <div>
+      <h1>Web Audio!</h1>
+      <div ui-view="content"></div>
     </div>
 
+  </div>
 
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- endbower -->
-    <!-- endbuild -->
 
-        <!-- build:js app.js -->
-        <script src="app.js"></script>
-        <!-- endbuild -->
+  <!-- build:js scripts/vendor.js -->
+  <!-- bower:js -->
+  <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <!-- endbower -->
+  <!-- endbuild -->
+
+  <!-- build:js app.js -->
+  <script src="app.js"></script>
+  <!-- endbuild -->
 </body>
+
 </html>
